// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shallow Snapshot Tests basic 1`] = `
<LoginForm
  email=""
  logginingInState="waiting"
  loginSuccess={[MockFunction]}
  onChangeEmail={[Function]}
  switchMode={[Function]}
/>
`;

exports[`Shallow Snapshot Tests reset-pasword mode 1`] = `
<PasswordResetRequestForm
  email=""
  logginingInState="waiting"
  loginSuccess={[MockFunction]}
  onChangeEmail={[Function]}
  switchMode={[Function]}
/>
`;

exports[`Shallow Snapshot Tests signup mode 1`] = `
<SignupForm
  email=""
  logginingInState="waiting"
  loginSuccess={[MockFunction]}
  onChangeEmail={[Function]}
  switchMode={[Function]}
/>
`;
